--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,8 +8,18 @@
 
   <body>
 
+  <h1>Books</h1>
+
+  <% @books.each do |book| %>
+
+    <p>タイトル</p>
+    <span><%= book.title %></span>
+
+  <% end %>
+
 <!-- form_with部分 -->
-<%= form_with model: @book do |f| %>
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
+
   <h4>タイトル</h4>
   <%= f.text_field :title %>
 
@@ -17,6 +27,7 @@
   <%= f.text_area :body %>
 
   <%= f.submit '投稿' %>
+
 <% end %>
 
   </body>
