--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,14 +11,22 @@
   <h1>Books</h1>
 
   <% @books.each do |book| %>
-
+  
     <p>タイトル</p>
     <span><%= book.title %></span>
 
   <% end %>
-
+  
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <!-- form_with部分 -->
-<%= form_with model: @book, url: '/books', method: :post do |f| %>
+<%= form_with model: @book do |f| %>
 
   <h4>タイトル</h4>
   <%= f.text_field :title %>
