--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,17 @@
  *= require_tree .
  *= require_self
  */
+ 
+ body {
+   font-size: 13px;
+   line-height: 18px;
+   margin: 33px;
+ }
+ 
+.div.field {
+   margin-bottom: 10px;
+ }
+ 
 .flash-message {
   border-radius: 5px;
   padding: 16px 24px;
