--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,6 +8,10 @@
   <h4>本文</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit '保存' %>
+  <Div Align="left"><%= f.submit '保存' %></Div>
+  
+  <%= link_to "Show",edit_book_path(@book.id) %>
+  |
+  <%= link_to "Back", books_path %>
 
 <% end %>
