--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
 
   <% @books.each do |book| %>
   
-    <p>タイトル</p>
+    <p>タイトル</p>  
     <span><%= book.title %></span>
 
   <% end %>
@@ -28,13 +28,16 @@
 <!-- form_with部分 -->
 <%= form_with model: @book do |f| %>
 
+<div class="field"> 
   <h4>タイトル</h4>
   <%= f.text_field :title %>
-
+</div>
+<div class="field"> 
   <h4>本文</h4>
   <%= f.text_area :body %>
+</div>
 
-  <%= f.submit '投稿' %>
+  <Div Align="left"><%= f.submit '投稿' %></Div>
 
 <% end %>
 
