レイアウト/デザインの作成

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -19,7 +19,7 @@
 
   <Div Align="left"><%= f.submit '保存' %></Div>
   
-  <%= link_to "Show",edit_book_path(@book.id) %>
+  <%= link_to "Show",book_path %>
   |
   <%= link_to "Back", books_path %>
 
