--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,13 +10,29 @@
 
   <h1>Books</h1>
 
-  <% @books.each do |book| %>
-  
-    <p>タイトル</p>  
-    <span><%= book.title %></span>
 
-  <% end %>
-  
+
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+        <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to "Show",book_path(book.id) %></td>
+        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+        <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+      </tr>
+        <% end %>
+    </tbody>
+  </table>
+
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
@@ -28,11 +44,11 @@
 <!-- form_with部分 -->
 <%= form_with model: @book do |f| %>
 
-<div class="field"> 
+<div class="field">
   <h4>タイトル</h4>
   <%= f.text_field :title %>
 </div>
-<div class="field"> 
+<div class="field">
   <h4>本文</h4>
   <%= f.text_area :body %>
 </div>
