[Finish] レイアウト/デザインの作成

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,5 @@
-<h2>タイトル</h2>
-<p><%= @book.title %></p>
-
-<h2>本文</h2>
-<p><%= @book.body %></p>
+<p> <strong>タイトル:</strong> <%= @book.title %> </p>
+<p> <strong>本文:</strong> <%= @book.body %> </p>
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
 |
