--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,6 +32,8 @@
         <% end %>
     </tbody>
   </table>
+  
+  <h2>New book</h2>
 
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
