--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -9,11 +9,11 @@
   <body>
 
     <h1>
-      "ようこそ" <string>Bookers</string> "へ！"
+      ようこそ <string>Bookers</string> へ！
     </h1>
 
-    <p> <string>Bookers</string> "では、さまざまな書類に関するあなたの意見や" </p>
-    <p> 印象を共有することが出来ます。 </p>
+    <p> <string>Bookers</string> では、さまざまな書類に関するあなたの意見や </p>
+    <p> 印象を共有し交換することが出来ます。 </p>
 
     <p> <a href="/books">start</a> </p>
 
