--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>編集画面</h1>
+<h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
@@ -11,13 +11,13 @@
 
 <%= form_with model: @book do |f| %>
 
-  <h4>タイトル</h4>
+  <h4>Title</h4>
   <%= f.text_field :title %>
 
-  <h4>本文</h4>
+  <h4>Body</h4>
   <%= f.text_area :body %>
 
-  <Div Align="left"><%= f.submit '保存' %></Div>
+  <Div Align="left"><%= f.submit 'Update Book' %></Div>
   
   <%= link_to "Show",book_path %>
   |
