--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -47,15 +47,15 @@
 <%= form_with model: @book do |f| %>
 
 <div class="field">
-  <h4>タイトル</h4>
+  <h4>Title</h4>
   <%= f.text_field :title %>
 </div>
 <div class="field">
-  <h4>本文</h4>
+  <h4>Body</h4>
   <%= f.text_area :body %>
 </div>
 
-  <Div Align="left"><%= f.submit '投稿' %></Div>
+  <Div Align="left"><%= f.submit 'Create Book' %></Div>
 
 <% end %>
 
